--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "start": "ts-node src/main.ts"
   },
   "dependencies": {
-    "@octokit/rest": "^16.38.3",
+    "@octokit/rest": "16.40.1",
     "@types/express": "4.17.2",
     "@types/lodash": "4.14.149",
-    "@types/node": "13.5.0",
+    "@types/node": "13.5.1",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "lodash": "4.17.15",
