--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@octokit/rest": "16.40.1",
+    "@slack/events-api": "2.3.1",
+    "@slack/web-api": "5.7.0",
     "@types/express": "4.17.2",
     "@types/lodash": "4.14.149",
     "@types/node": "13.5.1",
