--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "ts-node src/main.ts"
+    "debug": "nodemon -r tsconfig-paths/register -r ts-node/register",
+    "start": "nodemon -r tsconfig-paths/register"
   },
   "dependencies": {
-    "@octokit/rest": "16.40.1",
+    "@octokit/rest": "16.43.0",
     "@slack/events-api": "2.3.1",
     "@slack/web-api": "5.7.0",
     "@types/express": "4.17.2",
     "@types/lodash": "4.14.149",
-    "@types/node": "13.5.1",
+    "@types/node": "13.7.0",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "lodash": "4.17.15",
@@ -24,6 +25,27 @@
     "typescript": "3.7.5"
   },
   "devDependencies": {
-    "nodemon": "2.0.2"
+    "nodemon": "2.0.2",
+    "ts-loader": "6.2.1",
+    "tsconfig-paths": "3.9.0",
+    "tsconfig-paths-webpack-plugin": "3.2.0",
+    "webpack": "4.41.5",
+    "webpack-cli": "3.3.10",
+    "webpack-node-externals": "1.7.2",
+    "webpack-shell-plugin": "0.5.0"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      ".git"
+    ],
+    "execMap": {
+      "ts": "ts-node"
+    },
+    "env": {
+      "NODE_ENV": "development"
+    },
+    "watch": [
+      "src"
+    ]
   }
 }
