--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "debug": "nodemon -r tsconfig-paths/register -r ts-node/register",
+    "debug": "nodemon -r tsconfig-paths/register src/main.ts",
     "start": "nodemon -r tsconfig-paths/register"
   },
   "dependencies": {
@@ -20,6 +20,7 @@
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "lodash": "4.17.15",
+    "moment": "2.24.0",
     "node-axosoft": "2.3.0",
     "ts-node": "8.6.2",
     "typescript": "3.7.5"
