--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
+    "dist": "rimraf -r dist && webpack --config config/webpack.prod.config.js",
     "debug": "nodemon --inspect src/main.ts",
     "start": "nodemon src/main.ts"
   },
@@ -15,28 +16,29 @@
     "@octokit/webhooks": "7.0.0",
     "@slack/events-api": "2.3.1",
     "@slack/web-api": "5.7.0",
-    "@types/express": "4.17.2",
-    "@types/lodash": "4.14.149",
-    "@types/morgan": "1.7.37",
-    "@types/node": "13.7.0",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "lodash": "4.17.15",
     "moment": "2.24.0",
     "morgan": "1.9.1",
-    "node-axosoft": "2.3.0",
-    "ts-node": "8.6.2",
-    "typescript": "3.7.5"
+    "node-axosoft": "2.3.0"
   },
   "devDependencies": {
+    "@types/express": "4.17.2",
+    "@types/lodash": "4.14.149",
+    "@types/morgan": "1.7.37",
+    "@types/node": "13.7.0",
     "nodemon": "2.0.2",
+    "rimraf": "3.0.2",
+    "terser-webpack-plugin": "2.3.4",
     "ts-loader": "6.2.1",
+    "ts-node": "8.6.2",
     "tsconfig-paths": "3.9.0",
     "tsconfig-paths-webpack-plugin": "3.2.0",
-    "webpack": "4.41.5",
-    "webpack-cli": "3.3.10",
-    "webpack-node-externals": "1.7.2",
-    "webpack-shell-plugin": "0.5.0"
+    "typescript": "3.7.5",
+    "webpack": "4.41.6",
+    "webpack-cli": "3.3.11",
+    "webpack-node-externals": "1.7.2"
   },
   "nodemonConfig": {
     "ignore": [
